--- a/oldneighborhood-announcement-management/pom.xml
+++ b/oldneighborhood-announcement-management/pom.xml
@@ -38,6 +38,13 @@
 		    <artifactId>lombok</artifactId>
 		    <scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<classifier>jdk15</classifier>
+			<!-- check whether this would be a problem -->
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
