--- a/oldneighborhood-announcement-management/pom.xml
+++ b/oldneighborhood-announcement-management/pom.xml
@@ -50,6 +50,11 @@
 			<artifactId>druid</artifactId>
 			<version>1.1.9</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+			<version>1.4.4.RELEASE</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
