--- a/oldneighborhood-announcement-management/src/main/resources/application.properties
+++ b/oldneighborhood-announcement-management/src/main/resources/application.properties
@@ -1,16 +1,23 @@
 #sercer config
 server.port=8083
-server.context-path=/oldneighborhood
+server.context-path=/announcement
 
 #thymepeaf config
 spring.thymeleaf.cache=false
 
-#Eureka config
-eureka.instance.hostname=localhost
+#eureka config
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname= ${spring.cloud.client.ipAddress}
+#显示的实例ID,更关注实际跳转的ip端口服务
+eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
+spring.application.name=neighborhood-annoucement-service
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-spring.application.name=neighborhood-announcement-management-service
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://111.231.107.63:8761/eureka/eureka/
+spring.session.store-type=none
+#部署之后使用
+#eureka.instance.ip-address=111.231.107.63
+
 
 #druid config
 spring.datasource.type= com.alibaba.druid.pool.DruidAbstractDataSource
