--- a/oldneighborhood-announcement-management/src/main/resources/application.properties
+++ b/oldneighborhood-announcement-management/src/main/resources/application.properties
@@ -2,6 +2,10 @@
 server.port=8083
 server.context-path=/announcement
 
+#plus domain avoid conficts
+spring.jmx.default-domain=project-announcement
+
+
 #thymepeaf config
 spring.thymeleaf.cache=false
 
