"5/10管理模块提取整合"

--- a/oldneighborhood-announcement-management/src/main/resources/application.properties
+++ b/oldneighborhood-announcement-management/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 #sercer config
 server.port=8083
-server.context-path=/announcement
+#server.context-path=/management
 
 #plus domain avoid conficts
 spring.jmx.default-domain=project-announcement
-
 
 #thymepeaf config
 spring.thymeleaf.cache=false
@@ -14,7 +13,7 @@ eureka.instance.prefer-ip-address=true
 eureka.instance.hostname= ${spring.cloud.client.ipAddress}
 #显示的实例ID,更关注实际跳转的ip端口服务
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
-spring.application.name=neighborhood-annoucement-service
+spring.application.name=neighborhood-management-service
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.serviceUrl.defaultZone=http://111.231.107.63:8761/eureka/eureka/
@@ -24,6 +23,7 @@ spring.session.store-type=none
 
 
 #druid config
+#druid view user:oldneighborhood password:oldneighborhood
 spring.datasource.type= com.alibaba.druid.pool.DruidAbstractDataSource
 
 druid.url=jdbc:mysql://localhost:3306/old_neighborhood
