--- a/oldneighborhood-announcement-management/src/main/resources/application.properties
+++ b/oldneighborhood-announcement-management/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #sercer config
 server.port=8083
-#server.context-path=/management
+server.context-path=/management
 
 #plus domain avoid conficts
 spring.jmx.default-domain=project-announcement
@@ -19,14 +19,14 @@ eureka.client.fetch-registry=true
 eureka.client.serviceUrl.defaultZone=http://111.231.107.63:8761/eureka/eureka/
 spring.session.store-type=none
 #部署之后使用
-#eureka.instance.ip-address=111.231.107.63
+eureka.instance.ip-address=111.231.107.63
 
 
 #druid config
 #druid view user:oldneighborhood password:oldneighborhood
 spring.datasource.type= com.alibaba.druid.pool.DruidAbstractDataSource
 
-druid.url=jdbc:mysql://localhost:3306/old_neighborhood
+druid.url=jdbc:mysql://localhost:3306/oldneighborhood
 druid.username=root
 druid.password=123456
 druid.driverClassName=com.mysql.jdbc.Driver
